# my_malloc

./: .gitignore  CMakeLists.txt  README.md
include/: allocator.h  internal.h
src/: allocator.c  block.c  heap.c  internal.h
tests/: test_heap.c
